@@ -15,8 +15,6 @@ HQ - prehledova tabulka
 -----------------------
 - blbe se prohlizi na mobilu - mozna pridat ikonu ktera 
   po kliknuti nahore a vlevo zobrazi table headery nebo tak neco
-- policka ktera nikdy nebudou obsahovat casovy udaj (reseni ktere nesmeruje 
-  na zadne dalsi cgrp) zobrazovat sede
 - lepe vizualne oddelit jednotlive radky (tymy)
 - po kliknuti (v mobilu) na casovy udaj zobrazit k cemu se vztahuje (jmeno tymu, ukol)  
 
